add adb2c configuration. add authstateprovider.

--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -7,7 +7,8 @@
       "outputLocation": "bin/wwwroot",
       "appBuildCommand": "dotnet publish -c Release -o bin",
       "apiBuildCommand": "dotnet publish -c Release",
-      "run": "dotnet watch run"      
+      "run": "dotnet watch run",
+      "swaConfigLocation": "/workspace"
     }
   }
 }
