--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -7,8 +7,7 @@
       "outputLocation": "bin/wwwroot",
       "appBuildCommand": "dotnet publish -c Release -o bin",
       "apiBuildCommand": "dotnet publish -c Release",
-      "run": "dotnet watch run",
-      "swaConfigLocation": "/workspace"
+      "run": "dotnet watch run"      
     }
   }
 }
